{
  "version": 4,
  "terraform_version": "1.13.3",
  "serial": 39,
  "lineage": "4cde4509-0131-3378-4655-6936a4261930",
  "resources": [
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:556240469610:internet-gateway/igw-0d5b7b7d06c379fd5",
            "id": "igw-0d5b7b7d06c379fd5",
            "owner_id": "556240469610",
            "region": "eu-central-1",
            "tags": {
              "Name": "lesson-9-vpc-igw"
            },
            "tags_all": {
              "Name": "lesson-9-vpc-igw"
            },
            "vpc_id": "vpc-00f1ff5e855d3575c"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_access",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0d5b7b7d06c379fd5",
            "id": "r-rtb-08a90ff104fc1a0821080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "region": "eu-central-1",
            "route_table_id": "rtb-08a90ff104fc1a082",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "556240469610",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": null,
            "region": "eu-central-1",
            "route_table_id": "rtb-08a90ff104fc1a082"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:556240469610:route-table/rtb-08a90ff104fc1a082",
            "id": "rtb-08a90ff104fc1a082",
            "owner_id": "556240469610",
            "propagating_vgws": [],
            "region": "eu-central-1",
            "route": [],
            "tags": {
              "Name": "lesson-9-vpc-public-rt"
            },
            "tags_all": {
              "Name": "lesson-9-vpc-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-00f1ff5e855d3575c"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "556240469610",
            "id": "rtb-08a90ff104fc1a082",
            "region": "eu-central-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "0",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00cf9c2edab46f2f9",
            "region": "eu-central-1",
            "route_table_id": "rtb-08a90ff104fc1a082",
            "subnet_id": "subnet-0c0d2a8e86aedf49c"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": "1",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ce438c1a509cf120",
            "region": "eu-central-1",
            "route_table_id": "rtb-08a90ff104fc1a082",
            "subnet_id": "subnet-059dd148becfb5b53"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": "2",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e75533bb005edf6e",
            "region": "eu-central-1",
            "route_table_id": "rtb-08a90ff104fc1a082",
            "subnet_id": "subnet-05152038c8ceccc50"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "0",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:556240469610:subnet/subnet-0f0c0200698fec28a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1a",
            "availability_zone_id": "euc1-az2",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f0c0200698fec28a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "556240469610",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "eu-central-1",
            "tags": {
              "Name": "lesson-9-vpc-private-0"
            },
            "tags_all": {
              "Name": "lesson-9-vpc-private-0"
            },
            "vpc_id": "vpc-00f1ff5e855d3575c"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "556240469610",
            "id": "subnet-0f0c0200698fec28a",
            "region": "eu-central-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": "1",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:556240469610:subnet/subnet-0a6581cc104d3f1e5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1b",
            "availability_zone_id": "euc1-az3",
            "cidr_block": "10.0.5.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a6581cc104d3f1e5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "556240469610",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "eu-central-1",
            "tags": {
              "Name": "lesson-9-vpc-private-1"
            },
            "tags_all": {
              "Name": "lesson-9-vpc-private-1"
            },
            "vpc_id": "vpc-00f1ff5e855d3575c"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "556240469610",
            "id": "subnet-0a6581cc104d3f1e5",
            "region": "eu-central-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": "2",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:556240469610:subnet/subnet-04f8a23eb93237e7d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1c",
            "availability_zone_id": "euc1-az1",
            "cidr_block": "10.0.6.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04f8a23eb93237e7d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "556240469610",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "eu-central-1",
            "tags": {
              "Name": "lesson-9-vpc-private-2"
            },
            "tags_all": {
              "Name": "lesson-9-vpc-private-2"
            },
            "vpc_id": "vpc-00f1ff5e855d3575c"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "556240469610",
            "id": "subnet-04f8a23eb93237e7d",
            "region": "eu-central-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "0",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:556240469610:subnet/subnet-0c0d2a8e86aedf49c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1a",
            "availability_zone_id": "euc1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c0d2a8e86aedf49c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "556240469610",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "eu-central-1",
            "tags": {
              "Name": "lesson-9-vpc-public-0"
            },
            "tags_all": {
              "Name": "lesson-9-vpc-public-0"
            },
            "vpc_id": "vpc-00f1ff5e855d3575c"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "556240469610",
            "id": "subnet-0c0d2a8e86aedf49c",
            "region": "eu-central-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": "1",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:556240469610:subnet/subnet-059dd148becfb5b53",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1b",
            "availability_zone_id": "euc1-az3",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-059dd148becfb5b53",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "556240469610",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "eu-central-1",
            "tags": {
              "Name": "lesson-9-vpc-public-1"
            },
            "tags_all": {
              "Name": "lesson-9-vpc-public-1"
            },
            "vpc_id": "vpc-00f1ff5e855d3575c"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "556240469610",
            "id": "subnet-059dd148becfb5b53",
            "region": "eu-central-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": "2",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:556240469610:subnet/subnet-05152038c8ceccc50",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1c",
            "availability_zone_id": "euc1-az1",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05152038c8ceccc50",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "556240469610",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "eu-central-1",
            "tags": {
              "Name": "lesson-9-vpc-public-2"
            },
            "tags_all": {
              "Name": "lesson-9-vpc-public-2"
            },
            "vpc_id": "vpc-00f1ff5e855d3575c"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "556240469610",
            "id": "subnet-05152038c8ceccc50",
            "region": "eu-central-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:556240469610:vpc/vpc-00f1ff5e855d3575c",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0d4138d80fbb2356d",
            "default_route_table_id": "rtb-0b14e173295f29161",
            "default_security_group_id": "sg-0c886b870b12b00d2",
            "dhcp_options_id": "dopt-0b11f9cef23870e5d",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-00f1ff5e855d3575c",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0b14e173295f29161",
            "owner_id": "556240469610",
            "region": "eu-central-1",
            "tags": {
              "Name": "lesson-9-vpc"
            },
            "tags_all": {
              "Name": "lesson-9-vpc"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}